fix dropdown menu on mobile sidebar to be scrollable

--- a/app/javascript/stylesheets/partials/layout/sidebar.scss
+++ b/app/javascript/stylesheets/partials/layout/sidebar.scss
@@ -33,3 +33,9 @@
     text-decoration: none;
   }
 }
+
+.scrollable-menu {
+  height: auto;
+  max-height: 450px;
+  overflow-x: hidden;
+}
